// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. two lead elements, two support elements 1`] = `
Array [
  <Text>
    lead-1
  </Text>,
  <View />,
  <Text>
    lead-2
  </Text>,
  <View />,
  <Text>
    support-1
  </Text>,
  <View />,
  <Text>
    support-2
  </Text>,
]
`;

exports[`2. tablet - two lead elements, two support elements 1`] = `
<View>
  <View>
    <Text>
      lead-1
    </Text>
    <View />
    <Text>
      lead-2
    </Text>
  </View>
  <View />
  <View>
    <Text>
      support-1
    </Text>
    <View />
    <Text>
      support-2
    </Text>
  </View>
</View>
`;
